# GalGath

./: Cargo.toml  Dockerfile.alpine  Dockerfile.scratch  README.md
examples/: nature_of_predators.rs  nature_of_predators_to_epub.rs
src/: lib.rs  main.rs  pwa_serving.rs
src/assets/: manifest.json  mod.rs
src/assets/icons/: mod.rs
src/assets/pages/: pwa.html  share_status.html
src/assets/scripts/: service-worker.js
src/ebook_frontend/: errors.rs  mod.rs  types.rs
src/icons/: mod.rs
